[package]
name = "jperf"
authors = [ "kcza", "solmyrcan" ]
description = "A CLI for monitoring juju"
license = "GPL-3.0-or-later"
readme = "README.md"
version = "0.1.0"
edition = "2021"
repository = "github.com/TheSignPainter98/jperf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "wrap_help"] }
